Fix view-port calculation on iphone

--- a/src/scss/components/_main-grid.scss
+++ b/src/scss/components/_main-grid.scss
@@ -1,7 +1,6 @@
 .main-grid {
   display: grid;
   grid-template-rows: 48px auto 60px;
-  height: 100vh;
 }
 .main__content {
   display: grid;
